@@ -1,10 +1,11 @@
 ﻿## PLUXML 5.x (sortie : xx/xx/2016) ##
 
-[+] #177: Ajout de la protection du lien téléphone (contribution cfdev)
 [+] Contrôle de la force des mots de passe saisis
 [+] Administration > Paramètres > Thèmes : test existence fichier infos.xml dans le dossier thème pour le lister ou non
 [+] Tri des articles par ordre aléatoire configurable à partir de l'administration (Paramètres > Options d'affichage et Catégories)
 [+] plxShow:templateCSS - Prise en compte des fichiers css minifiés si disponibles (contribution alexandre-lg)
+[+] #69: plxAdmin:editArticle - ajout du hook plxAdminEditArticleEnd
+[+] #177: Ajout de la protection du lien téléphone (contribution cfdev)
 [+] #191: plxShow:catList - Ajout de la variable #cat_description
 [+] #194: Rédaction d'un article: optimisation de l'ajout rapide de tag (contribution MatthieuQuantin)
 BUG Non affichage du nombre de commentaires d'un article si les commentaires sont fermés
